# k8s-book-watcher-rs

./: Cargo.toml  README.md
deploy/: books.yml  crd.yml
src/: main.rs
