[package]
name = "k8s-book-watcher-rs"
version = "0.1.0"
authors = ["Ramón Berrutti <ramonberrutti@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.32"
kube = {version = "0.42.0", features = ["derive"] }
kube-runtime = "0.42.0"
k8s-openapi = { version = "0.9.0", default-features = false, features = ["v1_17"] }
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
tokio = { version = "0.2.22", features = ["full"] }
futures = "0.3.5"
